feat(日志): 添加日志功能实现
实现日志模块，包括初始化、记录请求事件和关闭日志文件功能
支持HTTP和HTTPS请求的日志记录，同时输出到控制台和日志文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,8 @@
         "memory": "c",
         "new": "c",
         "ostream": "c",
-        "utility": "c"
+        "utility": "c",
+        "util.h": "c",
+        "logger.h": "c"
     }
 }
