feat: 初始化项目结构并添加基本功能
添加.gitignore文件忽略编译产物和环境文件
创建makefile用于项目构建
实现utilities.c中的时间格式化功能
重构capture.c中的函数命名和调用
更新.vscode/settings.json以支持更多C头文件
实现localsniffer.c主程序逻辑

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,28 @@
         "ostream": "c",
         "utility": "c",
         "util.h": "c",
-        "logger.h": "c"
+        "logger.h": "c",
+        "capture.h": "c",
+        "queue": "c",
+        "stack": "c",
+        "time.h": "c",
+        "__assert": "c",
+        "__node_handle": "c",
+        "bitset": "c",
+        "cmath": "c",
+        "complex": "c",
+        "execution": "c",
+        "iterator": "c",
+        "type_traits": "c",
+        "limits": "c",
+        "mutex": "c",
+        "optional": "c",
+        "print": "c",
+        "ratio": "c",
+        "stdexcept": "c",
+        "tuple": "c",
+        "typeinfo": "c",
+        "variant": "c",
+        "algorithm": "c"
     }
 }
