--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,30 @@
 *.bin
 sniff
 .env
+*.log
+*.log.*
+*.dmp
+*.dmp.*
+*.core
+*.core.*
+*.stackdump
+*.stackdump.*
+*.pyc
+*.pyo
+*.pyd
+*.so
+*.swp
+*.swo
+*.bak
+*.tmp
+*.bak.*
+*.tmp.*
+*.orig
+*.orig.*
+*.rej
+*.rej.*
+*.a
+*.a.*
+*.la
+*.la.*
+*.lo
