ci(workflow): 更新测试文件名并修复上传构建产物配置
将单元测试文件名从est.c改为localsniffer_test.c
修复上传构建产物的actions配置，使用正确的action和参数

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: 运行单元测试
         run: |
-          gcc -Wall -Iinclude est.c -o est
+          gcc -Wall -Iinclude localsniffer_test.c -o est
           ./est
 
       - name: 打包二进制
@@ -33,4 +33,7 @@ jobs:
           echo "PKG_NAME=$PKG_NAME" >> $GITHUB_ENV
 
       - name: 上传构建产物
-        uses: ac
+        uses: actions/upload-artifact@v4
+        with:
+          name: sniff
+          path: ${{ env.PKG_NAME }}
