chore: 在.vscode/settings.json中添加stdlib.h的C头文件映射

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "tuple": "c",
         "typeinfo": "c",
         "variant": "c",
-        "algorithm": "c"
+        "algorithm": "c",
+        "stdlib.h": "c"
     }
 }
